--- a/config/config_action_node.yaml
+++ b/config/config_action_node.yaml
@@ -48,17 +48,17 @@ ects_controller:
   inverse_damping: 0.0001
 
 grasp:
-  translational_axis: y
-  rotational_axis: x
+  translational_axis: -y
+  rotational_axis: -x
 
 adaptive_estimator:
   alpha_force: 0.01 # 0.01
   beta_force: 0.00
-  force_slack: 0.0
+  force_slack: 1.0
   alpha_adapt_t: 1
   alpha_torque: 0.3 # 0.3
   beta_torque: 0.0
   alpha_adapt_r: 1
   torque_slack: 1.1
-  max_force: 5
+  max_force: 4
   max_torque: 0.2
